--- a/src/style.css
+++ b/src/style.css
@@ -51,6 +51,7 @@ img {
     justify-content: center;
     margin-left: 48%;
     margin-bottom: 2px;
+    font-family: Lato, sans-serif;
 }
 
 .slide-item2 {
@@ -84,6 +85,15 @@ img {
     width: 100%;
 }
 
+.icons {
+    width: 32px;
+    padding: 4px;
+    display: inline-block;
+}
+
+.icons img {
+    width: 100%;
+}
 
 .navigator-menu {
     text-align: right;
@@ -187,12 +197,14 @@ img {
 
 
 footer {
-    background-color: #725247;
-    color: #ffff;
+    background-color: rgba(182, 199, 255, 0.911);;
+    color: rgb(29, 28, 28);
     text-align: center;
-    padding: 50px;
+    padding: 30px;
     padding-left: 20px;
+    margin-top: 30px;
 }
+
 
 @media only screen and (max-width: 414px) { 
     .navigator-menu {
@@ -255,21 +267,11 @@ footer {
         display: block;
     }
 
-
-    .button-comprar {
-        font-size: 16px;
-        padding: 12px 10px;
-        height: auto;
-        cursor: pointer;
-        outline: none;
-    }
-
-
     .name-category {
         color: #725247;
         text-align: center;
         padding: 20px;
-        font-size: 23px;
+        font-size: 20px;
         text-align: center;
         font-family: Lato, sans-serif;
         margin-top: 40px;
