--- a/src/style.css
+++ b/src/style.css
@@ -9,38 +9,53 @@ body {
 .logo img {
     width: 170px;
 }
-.header {
+header {
+    font-family: Lato, sans-serif;
+    font-weight: 500;
     text-align: right;
     width: 100%;
-    position: absolute;
-    padding: 20px 30px;
-    box-sizing: border-box;
-    top: 0px;
-    left: 0px;
+    padding: 10px;
+    left:0 ;
+    top:0;
+    position: fixed;
     z-index: 999;
     background:  rgba(182, 199, 255, 0.911) ;
 }
 
+header img {
+	margin: 10px 0px 3px;
+	width: 13%;
+}
 
 .name-product {
     font-family: 'Lato', sans-serif;
-    font-size: 16px;
+    font-size: 100%;
+    width:100%;
     color: #565656;
-    margin: 15px;
+    margin-top: 10px;
     padding: 10px;
     text-align: center;
-    height: 41px;
-    border: 0.5px solid rgba(0, 0, 0, 0.7);
+    border:  0.5px solid rgba(242, 225, 205, 0.7); 
     border-radius: 5px;
+    background: #F2E1CD; 
+}
+.type-button {
+    font-family: 'Lato', sans-serif;
+    font-size: 100%;
+    width:100%;
+    color: #565656;
+    margin: 10px 0px 5px;
+    padding: 10px;
+    text-align: center;
+    border:  0.5px solid rgba(242, 225, 205, 0.7); 
+    border-radius: 5px;
+    background: #F2E1CD; 
 }
 
 .responsive-menu {
     display: none;
 }
 
-img {
-    vertical-align: middle;
-}
 
 .logo {
     float: left;
@@ -136,6 +151,10 @@ img {
 .hero img {
     width: 100%;
 }
+.nuestrosp {
+    background-color: #ffffff;
+    margin-top:50px;
+}
 .name-category {
     color: #725247;
     text-align: center;
@@ -146,49 +165,17 @@ img {
     margin-top: 60px;
 }
 
-.list {
-    margin: auto;
-    display: flex;
-    margin: auto;
-    color: #565656;
-    justify-content: space-evenly;
-    margin-bottom: 50px;
-}
-
-
-.selector {
-    background-color: #FFFF;
-    border: 2px;
-    border-color: #358E81;
-    border-radius: 10px;
-    width: 33.3%;
-    height: 66%;
-    margin: 10px;
-}
 
 .item {
-    box-sizing: border-box;
     padding: 5px;
-    background-color: #FFFF;
-    border: 2px;
     border-radius: 10px;
-    border: 1px solid #358E81;
-    margin: 20px;  
-    text-align: center;
+    border: 1px solid transparent;
+    background-clip: padding-box, border-box;
+    background-origin: padding-box, border-box;
+    background-image: linear-gradient(#fff, #fff), linear-gradient(#FFBDD1, #769BF9);
+    margin-bottom: 25px;
 }
 
-.white{
-    width: 33.3%;
-    box-sizing: border-box;
-    padding: 10px;
-    background-color: rgb(255, 255, 255);
-    border: 2px;
-    border-radius: 10px;
-    width: 33.3%;
-    height: 66%;
-    margin: 20px;  
-    text-align: center;
-}
 
 .product {
     width: 100%;
@@ -205,6 +192,34 @@ footer {
     margin-top: 30px;
 }
 
+.star-rating {
+    text-align: center;
+}
+.star-rating a {
+    display: inline-block;
+    font-size: 23px;
+    color: #95a5a6; /* gris (normal) */
+    text-decoration:none; 
+
+}
+
+.star-rating:hover a {
+    color: #dfb0ff; /* amarillo (seleccionado) */
+}
+
+.star-rating:hover a:hover ~ a {
+      color: #95a5a6; /* gris (normal) */
+}
+
+ 
+.product-price {
+    font-family: 'Lato', sans-serif;
+    font-size: 14px;
+    text-align: center;
+    color: #565656;
+    margin-top: 6px;
+    margin-bottom: 6px;
+}  
 
 @media only screen and (max-width: 414px) { 
     .navigator-menu {
@@ -219,6 +234,14 @@ footer {
         transition: all 0.2s ease-in-out;
         box-shadow: 0 1px 30px rgba(0, 0, 0, 0.3);
     }
+
+    .type-button {
+        font-family: 'Lato', sans-serif;
+        font-size: 14px;
+        width: 100%;
+        color: #565656;
+    }   
+   
 
     .slide-item {
         justify-content: center;
